Fixed responsive key text alignment

--- a/less/charts.less
+++ b/less/charts.less
@@ -2,7 +2,9 @@
 .title { text-align: center; font-size: 16px; padding: 1em; font-size: 120%; }
 .data { font-size: 80%; position: relative; }
 ol, ul, li { padding: 0; margin:0; list-style-type: none;}
-.fixed-key, .key { text-align: center; }
+
+.fixed-key { text-align: left; }
+.key { text-align: center; }
 .fixed-key ul, .key ul { display: block; }
 .fixed-key li, .key li { display: inline; text-align: center; }
 .fixed-key, .key { padding: .25em; margin-left: 65px; font-size: 80%; }
@@ -48,6 +50,7 @@ ol, ul, li { padding: 0; margin:0; list-style-type: none;}
 		float: none;
 		margin-left: 15px;
 		display: block;
+		text-align: left;
 	}
 	
 	.key li span { margin-left: -15px; }
